Provide a UI tool to convert type signatures to pretty names
